--- a/gcalendar_gen_class/genclass/templates/genclass/index.html
+++ b/gcalendar_gen_class/genclass/templates/genclass/index.html
@@ -27,7 +27,7 @@
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-group">
-                        {{ form }}
+                        {{ form.as_p }}
                     </div>
                     <button type="submit" class="btn btn-primary">Convert</button>
                 </form>
