--- a/gcalendar_gen_class/genclass/static/genclass/css/style.css
+++ b/gcalendar_gen_class/genclass/static/genclass/css/style.css
@@ -1,23 +1,47 @@
 html, body{
-    background-color: #EEE;
     width: 100%;
+    background-color: white;
 }
 
-#header{
+img {
+    margin: 10px auto 10px auto;
+    width: 90%;
+}
+
+header{
     margin-bottom: 10px;
     padding: 10px;
+}
+
+footer{
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+hr {
+    border: 0;
+    border-bottom: 1px dashed #ccc;
+    background: #999;
 }
 
 #main{
-    background-color: white;
-    box-shadow: 0 1px 2px #666;
     margin-bottom: 10px;
     padding: 10px;
 }
 
-#footer{
-    background-color: white;
-    box-shadow: 0 1px 2px #666;
-    margin-bottom: 10px;
-    padding: 10px;
+.bg-success {
+    background-color: #9c9 !important;
+}
+
+.errorlist {
+    padding: 0 0 0 10px;
+    background-color: bisque;
+}
+
+.errorlist li {
+    list-style: none;
+}
+
+#help li {
+    list-style-type: decimal;
 }
