--- a/gcalendar_gen_class/genclass/templates/genclass/index.html
+++ b/gcalendar_gen_class/genclass/templates/genclass/index.html
@@ -1,63 +1,30 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <title>Generate G-calendar import.</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static 'genclass/css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'genclass/css/style.css' %}">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+{% extends "genclass/base.html" %}
 
-        <div class="container row">
-            <section id="header" class="container col-sm-offset-2 col-sm-10 col-md-offset-4 col-md-6">
-                <h2>Generate calendar file from reg.kmitl</h2>
-            </section>
-            <section id="main" class="container col-sm-offset-2 col-sm-10 col-md-offset-4 col-md-6">
-                {% autoescape off %}
-                    {{ error }}
-                {% endautoescape %}
-                <p>Copy source code of your student's table calendar page then put in form.</p>
-                <form method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        {{ form.as_p }}
-                    </div>
-                    <button type="submit" class="btn btn-primary">Convert</button>
-                </form>
-            </section>
-        </div>
+{% block header %}
 
-        <div class="container row">
-            <section id="footer" class="container col-sm-offset-2 col-sm-10 col-md-offset-4 col-md-6">
-                <p>This project purpose to try Django framework If you found any bug/problem Please tell me. Email: 58070077@kmitl.ac.th</p>
-                <p>Developed by <a href="http://www.cloudian.in.th">Cloudian Studio</a> | <a href="https://github.com/chin8628/Reg2Calendar">Github</a></p>
-                <p>The MIT License (MIT) | Copyright (c) 2016 Boonyarith Piriyothinkul</p>
-            </section>
-        </div>
+    <h1>Reg2Cal</h1>
+    <p>Generating google calendar import's file from study's table reg.kmitl</p>
 
-    </body>
+{% endblock %}
 
-    <script src="{% static 'genclass/js/jquery-2.2.4.min.js' %}"></script>
-    <script src="{% static 'genclass/js/bootstrap.min.js' %}"></script>
+{% block content %}
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+    <section  class="col-sm-12">
 
-</html>
+        {% autoescape off %}
+            {{ error }}
+        {% endautoescape %}
+
+        <p>Attention! for the passenger who visit this site 1st time I have <a href="/help">HELP</a> for you.</p><br>
+
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="form-group">
+                {{ form.as_p }}
+            </div>
+            <button type="submit" class="btn btn-primary">Convert</button>
+        </form>
+
+    </section>
+
+{% endblock %}
