--- a/gcalendar_gen_class/genclass/templates/genclass/base.html
+++ b/gcalendar_gen_class/genclass/templates/genclass/base.html
@@ -15,17 +15,26 @@
         <link rel="stylesheet" href="{% static 'genclass/css/style.css' %}">
     </head>
 
-    <header class="container col-sm-offset-1 col-sm-10 col-md-offset-3 col-md-6">
+    <nav class="container col-sm-offset-1 col-sm-10 col-md-offset-3 col-md-6">
 
-        {% block header %} {% endblock %}
+        <span>Menu: </span>
+        <a href="/">Home</a> |
+        <a href="/help">Help</a>
         <hr>
 
-    </header>
+    </nav>
 
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <div id="title" class="container col-sm-offset-2 col-sm-10 col-md-offset-3 col-md-6">
+
+            {% block header %} {% endblock %}
+            <hr>
+
+        </div>
 
         <div id="main" class="container col-sm-offset-2 col-sm-10 col-md-offset-3 col-md-6">
 
