--- a/gcalendar_gen_class/genclass/templates/genclass/base.html
+++ b/gcalendar_gen_class/genclass/templates/genclass/base.html
@@ -48,11 +48,10 @@
 
         <hr>
         <div class="container col-sm-12">
-            <p>This project purpose to try Django framework If you found any bug/problem Please tell me. Email: 58070077@kmitl.ac.th</p>
+            <p>For bug/problem, Please tell me. Email: 58070077@kmitl.ac.th</p>
             <p>
                 Developed by <a href="http://www.cloudian.in.th">Cloudian Studio</a>
                 | <a href="https://github.com/chin8628/Reg2Calendar">Github</a>
-                | <a href="/help">Help</a>
             </p>
             <p>The MIT License (MIT) | Copyright (c) 2016 Boonyarith Piriyothinkul</p>
         </div>
