--- a/gcalendar_gen_class/genclass/templates/genclass/help.html
+++ b/gcalendar_gen_class/genclass/templates/genclass/help.html
@@ -13,7 +13,7 @@
     <section  class="col-sm-12">
         <ul id="help">
             <li>
-                Open your reg.kmitl and find youe table's classroom (They called "studytable").
+                Open your reg.kmitl and find your table's classroom (They called "studytable").
                 If you cannot remember what page that we are meaning, Look this image.
                 <img src="{% static 'genclass/img/example_table.png' %}">
             </li>
@@ -27,7 +27,10 @@
                 Paste source code into form "report_studytable_show.php's source code"
             </li>
             <li>
-                Click "convert" button, FINISHED. You have a time for drink coffee or tea.
+                Select opening semester day and ending semester day.
+            </li>
+            <li>
+                Click "convert" button, FINISHED.
             </li>
         </ul>
     </section>
