--- a/gcalendar_gen_class/genclass/templates/genclass/success.html
+++ b/gcalendar_gen_class/genclass/templates/genclass/success.html
@@ -4,7 +4,7 @@
 
     <h1>Export success!</h1>
     <p>
-        Congratulation your successful. Don't forget to buy coffee or tea for me.
+        Congratulation for your successful.
     </p>
 
 {% endblock %}
@@ -15,7 +15,7 @@
 
         <p>You have a lot time to drink coffee or tea because you don't waste time for create event in your calendar.</p>
         <p>Thank you for use over service, Exit button is 'X' on top-right window.</p>
-        <p>P.S. If you found me somewhere in university</p>
+        <p>P.S. If you found me somewhere in university, You can buy some snack for me.</p>
 
     </section>
 
