Add block script

--- a/gcalendar_gen_class/genclass/templates/genclass/base.html
+++ b/gcalendar_gen_class/genclass/templates/genclass/base.html
@@ -60,6 +60,11 @@
 
     <script src="{% static 'genclass/js/jquery-2.2.4.min.js' %}"></script>
     <script src="{% static 'genclass/js/bootstrap.min.js' %}"></script>
+    <script>
+
+        {% block script %} {% endblock %}
+
+    </script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
